<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.incode8.weather.com.incode_it.incode8.weather.ui.setting.SettingActivity">
    <ImageView
        android:layout_marginTop="-10dp"
        android:id="@+id/setting_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/header_night" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:id="@+id/search_btn"
        android:src="@drawable/ic_action_name"
        android:layout_marginRight="5dp"
        android:layout_alignParentRight="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/setting"
        android:paddingTop="5dp"
        app:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:layout_centerHorizontal="true"/>
    <ImageButton
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@null"
        android:id="@+id/back_button"
        android:src="@drawable/back_button"
        android:layout_alignParentLeft="true"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:clickable="true"
        android:id="@+id/far"
        android:layout_marginLeft="90dp"
        android:src="@drawable/fahrenheit_unselected" />
    <ImageView
        android:layout_marginTop="150dp"
        android:layout_marginRight="90dp"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:id="@+id/cels"
        android:clickable="true"
        android:layout_height="wrap_content"
        android:src="@drawable/celsius" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:layout_gravity="bottom"
        android:layout_marginTop="250dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="65dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/dayPrimary"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="270dp"
        android:id="@+id/city_user"
        android:clickable="true"
        android:textSize="20sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:layout_gravity="bottom"
        android:layout_marginTop="310dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="65dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="325dp">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/dayPrimary"
        android:layout_marginLeft="10dp"
        android:text="@string/day"
        android:id="@+id/day_weather"
        android:clickable="true"
        android:textSize="20sp" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:clickable="true"
        android:text="@string/week"
        android:id="@+id/three_days"
        android:textSize="20sp" />
    <TextView
        android:layout_width="0dp"
        android:clickable="true"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content"
        android:text="@string/two_week"
        android:id="@+id/week_weather"
        android:textSize="20sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:drawable/divider_horizontal_bright"
        android:layout_gravity="bottom"
        android:layout_marginTop="365dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="65dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="385dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/dayPrimary"
            android:layout_marginLeft="60dp"
            android:text="@string/km"
            android:id="@+id/km_weater"
            android:clickable="true"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/mi"
            android:id="@+id/mi_weater"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>